# slate

./: .gitignore  AGENTS.md  Makefile  config.ini  pyproject.toml  slate
.github/workflows/: ci.yml  test.yml
.opencode/: package-lock.json
.opencode/output/: edge_case_review.json
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-project-initialization-packaging.md  1-2-core-layer-models-events-eventbus.md  1-3-plugin-api-contracts-pluginmanager.md  1-4-services-layer-configservice-themeservice.md  1-5-services-layer-fileservice-gitservice.md  1-6-main-window-editor-view.md  1-7-tab-manager-save-discard-guard.md  1-8-cli-entry-point-startup-sequence.md  1-9-development-tooling-ci.md  2-1-file-explorer-basic-tree-view-navigation.md  2-2-file-explorer-lazy-loading-performance.md  2-3-file-explorer-context-menu-file-operations.md  3-1-diff-view-component.md  3-2-source-control-git-status-file-listing.md  3-3-source-control-inline-diff-viewing.md  sprint-status.yaml  tech-spec-file-explorer-ui-improvements.md  tech-spec-fix-intent-gaps.md
_bmad-output/implementation-artifacts/tests/: test-summary.md
_bmad-output/planning-artifacts/: architecture.md  e2e-testing-proposal.md  epics.md  gtk4-migration-proposal.md  implementation-readiness-report-2026-03-24.md  implementation-readiness-report-2026-03-25.md  prd-validation-report.md  prd.md  product-brief-slate-2026-03-24.md  sprint-change-proposal-2026-03-24.md  sprint-change-proposal-2026-03-25.md  ux-design-specification.md
_bmad-output/quick-specs/: scrollable-breadcrumb.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: opencode.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: slate-spec.md
scripts/: install-deps.sh  lint.sh  run-tests.sh  slate
slate/: __init__.py  __main__.py  main.py  version.py
slate/core/: __init__.py  event_bus.py  events.py  models.py  plugin_api.py
slate/plugins/: __init__.py
slate/plugins/core/: __init__.py  file_explorer.py  source_control.py
slate/services/: __init__.py  config_service.py  file_service.py  git_service.py  plugin_manager.py  theme_service.py
slate/ui/: __init__.py  actions.py  app.py  main_window.py  toast.py
slate/ui/dialogs/: __init__.py  save_discard_dialog.py
slate/ui/editor/: __init__.py  diff_view.py  editor_factory.py  editor_view.py  error_placeholder.py  tab_bar.py  tab_manager.py
slate/ui/panels/: file_explorer_tree.py  source_control_panel.py
tests/: __init__.py  conftest.py  test_main.py  test_project_structure.py  test_pyproject_toml.py
tests/core/: test_event_bus.py  test_events.py  test_models.py  test_plugin_api.py
tests/e2e/: __init__.py  conftest.py  test_accessibility_disabled.py  test_launch.py  test_smoke.py
tests/e2e/driver/: __init__.py  actions.py  app.py  queries.py
tests/plugins/: test_file_explorer.py  test_source_control.py
tests/services/: test_config_service.py  test_file_service.py  test_git_service.py  test_plugin_manager.py  test_services_init.py  test_theme_service.py
tests/ui/: __init__.py  test_app.py  test_editor_factory.py  test_main_window.py  test_source_control_panel.py  test_tab_manager.py  test_toast.py
tests/ui/editor/: __init__.py  test_diff_view.py
tests/ui/gtk/: __init__.py  conftest.py  test_app.py  test_dialogs.py  test_panel.py  test_tabs.py
tests/ui/panels/: test_file_explorer_hidden_files.py  test_file_explorer_performance.py  test_file_explorer_tree.py
