[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slate"
version = "0.1.0"
description = "A modern code editor built with GTK4"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Slate Team", email = "team@slate-editor.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PyGObject>=3.42",
    "gitpython>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff",
    "mypy",
]
test-gtk = [
    "pytest>=7.0",
    "pytest-xvfb>=2.0",
    "pytest-timeout>=2.0",
]
test-e2e = [
    "dogtail>=2.0",
    "pytest-timeout>=2.0",
]
test = [
    "pytest>=7.0",
    "pytest-xvfb>=2.0",
    "pytest-timeout>=2.0",
    "pytest-xdist>=3.0",
    "dogtail>=2.0",
]

[project.scripts]
slate = "slate.main:main"

[tool.hatch.build.targets.wheel]
packages = ["slate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "UP036"]

[tool.ruff.lint.per-file-ignores]
"slate/core/plugin_api.py" = ["B027"]
"slate/ui/main_window.py" = ["E402", "B023"]
"tests/ui/gtk/test_tabs.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true